# tool-feedback

./: Cargo.toml  README.md
launchd/: com.example.tool-feedback.plist.template
src/: config.rs  daemon.rs  main.rs  maintainer.rs  ops.rs  owners.rs  state.rs  telegram.rs
